tests/baselines/reference/derivedClassSuperProperties.errors.txt
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(9,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(10,9): error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(17,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(18,9): error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(18,32): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(25,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(26,9): error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(27,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(33,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(34,9): error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(34,32): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(35,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(50,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(66,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(73,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(81,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(82,33): error TS2333: 'this' cannot be referenced in constructor arguments.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(136,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(137,34): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(171,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(172,35): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(222,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(225,18): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(228,18): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(254,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(256,19): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(264,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(266,14): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts (28 errors) ====
    class Base {
        constructor(a?) { }
    
        receivesAnything(param?) { }
    }
    
    class Derived1 extends Base {
        prop = true;
        constructor() {
        ~~~~~~~~~~~~~~~
            super.receivesAnything();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~
!!! error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class Derived2 extends Base {
        prop = true;
        constructor() {
        ~~~~~~~~~~~~~~~
            super.receivesAnything(this);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~
!!! error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
                                   ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class Derived3 extends Base {
        prop = true;
        constructor() {
        ~~~~~~~~~~~~~~~
            super.receivesAnything();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~
!!! error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
            super(this);
    ~~~~~~~~~~~~~~~~~~~~
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class Derived4 extends Base {
        prop = true;
        constructor() {
        ~~~~~~~~~~~~~~~
            super.receivesAnything(this);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~
!!! error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
                                   ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super(this);
    ~~~~~~~~~~~~~~~~~~~~
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class Derived5 extends Base {
        prop = true;
        constructor() {
            super();
            super.receivesAnything();
        }
    }
    
    class Derived6 extends Base {
        prop = true;
        constructor() {
            super(this);
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super.receivesAnything();
        }
    }
    
    class Derived7 extends Base {
        prop = true;
        constructor() {
            super();
            super.receivesAnything(this);
        }
    }
    
    class Derived8 extends Base {
        prop = true;
        constructor() {
            super(this);
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super.receivesAnything(this);
        }
    }
    
    class DerivedWithArrowFunction extends Base {
        prop = true;
        constructor() {
        ~~~~~~~~~~~~~~~
            (() => this)();
    ~~~~~~~~~~~~~~~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class DerivedWithArrowFunctionParameter extends Base {
        prop = true;
        constructor() {
        ~~~~~~~~~~~~~~~
            const lambda = (param = this) => {};
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                    ~~~~
!!! error TS2333: 'this' cannot be referenced in constructor arguments.
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class DerivedWithFunctionDeclaration extends Base {
        prop = true;
        constructor() {
            function declaration() {
                return this;
            }
            super();
        }
    }
    
    class DerivedWithFunctionDeclarationAndThisParam extends Base {
        prop = true;
        constructor() {
            function declaration(param = this) {
                return param;
            }
            super();
        }
    }
    
    class DerivedWithFunctionExpression extends Base {
        prop = true;
        constructor() {
            (function () {
                return this;
            })();
            super();
        }
    }
    
    class DerivedWithClassDeclaration extends Base {
        prop = true;
        constructor() {
            class InnerClass {
                private method() {
                    return this;
                }
                private property = 7;
                constructor() {
                    this.property;
                    this.method();
                }
            }
            super();
        }
    }
    
    class DerivedWithClassDeclarationExtendingMember extends Base {
        memberClass = class { };
        constructor() {
        ~~~~~~~~~~~~~~~
            class InnerClass extends this.memberClass {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                     ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
                private method() {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    return this;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                }
    ~~~~~~~~~~~~~
                private property = 7;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                constructor() {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    super();
    ~~~~~~~~~~~~~~~~~~~~~~~~
                    this.property;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    this.method();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                }
    ~~~~~~~~~~~~~
            }
    ~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class DerivedWithClassExpression extends Base {
        prop = true;
        constructor() {
            console.log(class {
                private method() {
                    return this;
                }
                private property = 7;
                constructor() {
                    this.property;
                    this.method();
                }
            });
            super();
        }
    }
    
    class DerivedWithClassExpressionExtendingMember extends Base {
        memberClass = class { };
        constructor() {
        ~~~~~~~~~~~~~~~
            console.log(class extends this.memberClass { });
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                      ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class DerivedWithDerivedClassExpression extends Base {
        prop = true;
        constructor() {
            console.log(class extends Base {
                constructor() {
                    super();
                }
                public foo() {
                    return this;
                }
                public bar = () => this;
            });
            super();
        }
    }
    
    class DerivedWithNewDerivedClassExpression extends Base {
        prop = true;
        constructor() {
            console.log(new class extends Base {
                constructor() {
                    super();
                }
            }());
            super();
        }
    }
    
    class DerivedWithObjectAccessors extends Base {
        prop = true;
        constructor() {
            const obj = {
                get prop() {
                    return true;
                },
                set prop(param) {
                    this._prop = param;
                }
            };
            super();
        }
    }
    
    class DerivedWithObjectAccessorsUsingThisInKeys extends Base {
        propName = "prop";
        constructor() {
        ~~~~~~~~~~~~~~~
            const obj = {
    ~~~~~~~~~~~~~~~~~~~~~
                _prop: "prop",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
                get [this.propName]() {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                     ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
                    return true;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                },
    ~~~~~~~~~~~~~~
                set [this.propName](param) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                     ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
                    this._prop = param;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                }
    ~~~~~~~~~~~~~
            };
    ~~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class DerivedWithObjectAccessorsUsingThisInBodies extends Base {
        propName = "prop";
        constructor() {
            const obj = {
                _prop: "prop",
                get prop() {
                    return this._prop;
                },
                set prop(param) {
                    this._prop = param;
                }
            };
            super();
        }
    }
    
    class DerivedWithObjectComputedPropertyBody extends Base {
        propName = "prop";
        constructor() {
        ~~~~~~~~~~~~~~~
            const obj = {
    ~~~~~~~~~~~~~~~~~~~~~
                prop: this.propName,
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                      ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            };
    ~~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class DerivedWithObjectComputedPropertyName extends Base {
        propName = "prop";
        constructor() {
        ~~~~~~~~~~~~~~~
            const obj = {
    ~~~~~~~~~~~~~~~~~~~~~
                [this.propName]: true,
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                 ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            };
    ~~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class DerivedWithObjectMethod extends Base {
        prop = true;
        constructor() {
            const obj = {
                getProp() {
                    return this;
                },
            };
            super();
        }
    }
    